--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,39 +5,87 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/flashcard_question"
-        android:layout_marginTop="20dp"
-        android:layout_margin="15dp"
+
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:gravity="center"
-        android:text="Who is the 44th President of the United States?"
-        android:textColor="#ffff"
+        android:layout_height="155dp"
         android:background="@drawable/card_background"
-        android:textSize="40sp" />
+        android:elevation="5dp"
+        android:padding="20dp"
+        android:text="Who is the 44th President of the United States?"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+
+        />
+
 
     <TextView
         android:id="@+id/flashcard_answer"
-        android:layout_marginTop="20dp"
-        android:layout_margin="15dp"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/card_background"
+        android:layout_height="50dp"
+        android:layout_below="@+id/flashcard_question"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/material_dynamic_primary20"
+        android:elevation="10dp"
+        android:gravity="center"
+        android:text="Barack Obama"
+        android:textColor="@color/white"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/flashcard_answer_2"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/flashcard_answer"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/material_dynamic_primary20"
+        android:elevation="10dp"
         android:gravity="center"
         android:text="Bill Clinton"
-        android:textColor="#ffff"
-        android:textSize="40sp"
-        android:visibility="invisible"
-        />
+        android:textColor="@color/white"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/flashcard_answer_3"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/flashcard_answer_2"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/material_dynamic_primary20"
+        android:elevation="10dp"
+        android:gravity="center"
+        android:text="George H. W. Bush"
+        android:textColor="@color/white"
+        android:textSize="30sp" />
 
     <ImageButton
-        android:id="@+id/image_plus_cercle"
+        android:id="@+id/imageButton3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="640dp"
         android:layout_marginLeft="300dp"
         android:background="#ffff"
         android:src="@drawable/iconmonstr_plus_circle_lined" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="227dp"
+        android:layout_height="338dp"
+        android:layout_marginTop="640dp"
+        android:layout_marginRight="300dp"
+        android:background="#ffff"
+        android:src="@drawable/iconmonstr_edit_11" />
 
 </RelativeLayout>
